# qje5vf_DS5111su24_lab_01

./: .gitignore  Makefile  README.md  pylint_output.txt  pylintrc  pyproject.toml  requirements.txt  tokenize.py  tokenize_text.py
.github/workflows/: validations.yml
src/qje5vf/: __init__.py  time_value_money.py
tests/: expected_failure_decorator.py  test_base.py  test_bash_compare.py  test_clean_text.py  test_compatible.py  test_count_words.py  test_fail_for_sure.py  test_integrate.py  test_tokenize.py  tokenize_text.py
