[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qje5vf"
version = "0.0.1"
authors = [
  { name="Thomas Hammons", email="qje5vf@virginia.com" },
]
description = "boodle oodle noodle poodle doodle moo"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/thammo4/qje5vf_DS5111su24_lab_01"
issues = "https://github.com/thammo4/qje5vf_DS5111su24_lab_01/issues"

[tool.pytest.ini_options]
markers = ["integration: marks integration tests (deselect with '-m \"not integration\"')"]
testpaths = ["tests"]
pythonpath = ["src"]
